<?xml version="1.0" encoding="utf-8"?>
<!--
	Author: Nico Alt
	See the file "LICENSE.txt" for the full license governing this code.
-->
<resources>

    <string name="app_name">HW-Manager</string>
    <string name="about_us_copyright" translatable="false">Copyright 2013–2015 Nico Alt\nLicensed under GPLv3</string>
    <string name="about_us_image_description" translatable="false">Launcher Icon</string>

    <!-- Titles -->
    <string name="title_subjects">Subjects</string>
    <string name="title_subject_offers">Subject Suggestions</string>
    <string name="title_homework">Homework</string>
    <string name="title_addhomework">Add Homework</string>
    <string name="title_about">About</string>

    <!-- Menu Items -->
    <string name="action_add">Add</string>
    <string name="action_delete">Delete everything</string>
    <string name="action_settings">Settings</string>

    <!-- Homework Page -->
    <string name="hw_subject">Subject</string>
    <string name="hw_until">Until</string>
    <string name="hw_urgent">Important</string>
    <string name="hw_homework">Homework</string>
    <string name="hw_add">Add</string>

    <!-- Preferences Page -->
    <string name="pref_language">Language</string>
    <string name="pref_language_default">System default</string>
    <string name="pref_subjects">Subjects</string>
    <string name="pref_subjects_add">Add a subject</string>
    <string name="pref_subjects_add_summary">Add a new subject to the list</string>
    <string name="pref_offers_overview">Suggestions</string>
    <string name="pref_offers_overview_summary">A list with suggestions</string>
    <string name="pref_subjects_overview">Overview</string>
    <string name="pref_subjects_overview_summary">A list containing all subjects</string>
    <string name="pref_subjects_reset">Reset</string>
    <string name="pref_subjects_reset_summary">Reset the subjects list to the default value</string>
    <string name="pref_about">About</string>
    <string name="pref_about_credits">Credits</string>
    <string name="pref_about_current_version">Current Version</string>
    <string name="pref_feedback">Send feedback</string>
    <string name="pref_feedback_share">Share</string>
    <string name="pref_feedback_share_summary">Share this app with a friend!</string>
    <string name="pref_feedback_playstore">Play Store</string>
    <string name="pref_feedback_playstore_summary">Review the app in the Google Play Store</string>
    <string name="pref_feedback_mail">Email</string>
    <string name="pref_feedback_mail_summary">Send an email to the developer</string>
    <string name="pref_homework_import">Import</string>
    <string name="pref_homework_import_summary">Import the homework from the SD</string>
    <string name="pref_homework_export">Export</string>
    <string name="pref_homework_export_summary">Export the homework to the SD</string>

    <!-- Dialogs -->
    <string name="dialog_addSubject">Add Subject</string>
    <string name="dialog_addSubject_message">Which subject do you want to add?</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_really_delete_hw">Do you really want to delete all homework assignments?</string>
    <string name="dialog_really_delete_subs">Do you really want to delete all subjects?</string>
    <string name="dialog_export_message">Do you really want to backup the homework and overwrite the old backup?</string>
    <string name="dialog_import_message">Do you really want to import the homework and overwrite the current homework?</string>

    <!-- Intents -->
    <string name="intent_mail">Send a mail to the developer</string>
    <string name="intent_share_title">Share</string>
    <string name="intent_share_text">Hey, do you want to try out HW-Manager? You can download it here: http://goo.gl/GT99iV</string>

    <!-- Toasts -->
    <string name="toast_have2enter">You have to enter something!</string>
    <string name="added">added</string>
    <string name="toast_nobackup">No Files at SD/</string>
    <string name="toast_import_success">Import successfully</string>
    <string name="toast_import_fail">Import failed</string>
    <string name="toast_export_success">Export successfully</string>
    <string name="toast_export_fail">Export failed</string>

    <!-- Homework String Items -->
    <string name="action_urgent">Important!</string>

    <!-- Default Subject Array -->
    <string-array name="subjects">
        <item>Biology</item>
        <item>Chemistry</item>
        <item>English</item>
        <item>History</item>
        <item>Math</item>
        <item>Physics</item>
        <item>Sports</item>
    </string-array>

    <!-- Subject Offers Array -->
    <string-array name="subject_offers">
        <item>Afrikaans</item>
        <item>Art</item>
        <item>Drama</item>
        <item>Ethics</item>
        <item>Geographics</item>
        <item>German</item>
        <item>French</item>
        <item>Latin</item>
        <item>Music</item>
        <item>Photography</item>
        <item>Politics and Economics</item>
        <item>Religion</item>
        <item>Spanish</item>
    </string-array>

    <string name="about_us_content" translatable="false">
<![CDATA[
<b>Developers</b><br/>
• Nico Alt<br/>
• Devin<br/>
<br/>
<b>Translators</b><br/>
• Arya S Jr<br/>
• Hevesi János<br/>
• Jaroslav Lichtblau<br/>
<br/>
This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. See http://www.gnu.org/licenses/gpl-3.0
]]>
    </string>

</resources>