<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
<ScrollView 
    android:id="@+id/scrollView_add"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">        

            <TextView
                android:id="@+id/textView_subject"
                android:text="@string/hw_subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_subject"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_width="fill_parent"/>


            <TextView
                android:id="@+id/textView_until"
                android:text="@string/hw_until"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:layout_width="fill_parent"
                android:id="@+id/button_until"
                style="?android:attr/spinnerStyle"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:layout_marginBottom="8dp"
                android:onClick="setUntil" />

            <EditText
                android:layout_width="fill_parent"
                android:id="@+id/editText_homework"
                android:hint="@string/hw_homework"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textMultiLine" />

            <CheckBox
                android:id="@+id/checkBox_urgent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/hw_urgent" />

    </LinearLayout>
</ScrollView>
<include layout="@layout/button_bar"/>
</LinearLayout>
